# suno-sdk

./: CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/suno/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-suno/: build.gradle.kts
js/: README.md  package.json
js/manual-tests/: .env.example  README.md  test-all.ts  test-conversions.ts  test-covers.ts  test-error-handling.ts  test-extension.ts  test-generation-custom.ts  test-generation-simple.ts  test-instrumentals.ts  test-lyrics.ts  test-midi.ts  test-music-videos.ts  test-personas-styles.ts  test-section-replacements.ts  test-timestamped-lyrics.ts  test-vocal-removal.ts  test-vocals.ts
js/skills/suno/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
python/: README.md  pyproject.toml
python/src/runapi/suno/: __init__.py  _validators.py  client.py  contract_gen.py  types.py
python/src/runapi/suno/resources/: __init__.py  add_instrumental.py  add_vocals.py  boost_style.py  check_voice.py  convert_audio.py  cover_audio.py  create_mashup.py  extend_music.py  generate_artwork.py  generate_lyrics.py  generate_midi.py  generate_persona.py  generate_voice.py  get_timestamped_lyrics.py  regenerate_validation_phrase.py  replace_section.py  separate_audio_stems.py  text_to_music.py  text_to_sound.py  visualize_music.py  voice_to_validation_phrase.py
python/tests/: test_client.py
ruby/: README.md  runapi-suno.gemspec
ruby/examples/: suno_generation.rb
ruby/lib/: runapi-suno.rb
ruby/lib/runapi/: suno.rb
(+165 files in other folders)
