[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-suno"
version = "0.1.0"
description = "Suno music, sound, lyrics, and voice client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "suno", "music", "audio", "lyrics", "voice", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/suno"
Documentation = "https://runapi.ai/docs#sdk-suno"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "suno"
